# Victoria

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PKG-INFO  README.md  models.py  pyproject.toml  requirements.txt  setup.py  solver.py  victoria.py
documentation/: Module_Overview.md  README.md  README_NL.md  api.md  user_guide.md
tests/: __init__.py  test_victoria.py
victoria/: __init__.py  custom.md  fifo.py  mix.py  models.py  profile_victoria.py  quality.py  segmentation.py  solver.py  victoria.py
victoria.egg-info/: SOURCES.txt  requires.txt
